fixed grids overlapping problem

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -68,6 +68,7 @@ main {
     grid-row: 1/2;
     align-self: flex-start; 
     margin-top: .5rem; 
+    margin-right: .5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,7 +86,7 @@ main {
     display: grid;
     grid-template-columns: 10% 90%;
     grid-template-rows: auto;
-    grid-gap: 1rem;
+    /* grid-gap: 1rem; */
     /* align-items: start; */
     /* justify-content: start; */
     line-height: 1.8rem;
@@ -178,6 +179,11 @@ Media queries
 
     .title {
         font-size: 1.6rem;
+    }
+
+    p {
+        font-size: .9rem;
+        text-overflow: ellipsis;
     }
 }
 
